--- a/Discorra/Discorra/Window Controllers/MainWindowController.xib
+++ b/Discorra/Discorra/Window Controllers/MainWindowController.xib
@@ -57,7 +57,7 @@
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
-				<string key="NSWindowContentMinSize">{506, 370}</string>
+				<string key="NSWindowContentMinSize">{710, 370}</string>
 				<object class="NSView" key="NSWindowView" id="714029937">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -103,7 +103,7 @@
 							<string key="NSFrame">{{42, 3}, {25, 25}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="276965202"/>
+							<reference key="NSNextKeyView" ref="111703474"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="675684604">
@@ -133,6 +133,7 @@
 							<string key="NSFrame">{{733, 3}, {71, 25}}</string>
 							<reference key="NSSuperview" ref="714029937"/>
 							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="207454101">
@@ -188,7 +189,7 @@
 							</object>
 							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 						</object>
-						<object class="NSProgressIndicator" id="276965202">
+						<object class="NSProgressIndicator" id="111703474">
 							<reference key="NSNextResponder" ref="714029937"/>
 							<int key="NSvFlags">293</int>
 							<string key="NSFrame">{{292, 6}, {226, 20}}</string>
@@ -200,12 +201,12 @@
 							<int key="NSpiFlags">24591</int>
 							<double key="NSMaxValue">100</double>
 						</object>
-						<object class="NSSplitView" id="702005236">
+						<object class="NSSplitView" id="725181389">
 							<reference key="NSNextResponder" ref="714029937"/>
 							<int key="NSvFlags">274</int>
 							<array class="NSMutableArray" key="NSSubviews">
 								<object class="NSScrollView" id="1012084236">
-									<reference key="NSNextResponder" ref="702005236"/>
+									<reference key="NSNextResponder" ref="725181389"/>
 									<int key="NSvFlags">274</int>
 									<array class="NSMutableArray" key="NSSubviews">
 										<object class="NSClipView" id="54222572">
@@ -343,7 +344,7 @@
 											<string key="NSFrame">{{0, 322}, {506, 16}}</string>
 											<reference key="NSSuperview" ref="1012084236"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="873467321"/>
+											<reference key="NSNextKeyView" ref="353973570"/>
 											<string key="NSReuseIdentifierKey">_NS:60</string>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 											<int key="NSsFlags">1</int>
@@ -353,7 +354,7 @@
 										</object>
 									</array>
 									<string key="NSFrameSize">{382, 338}</string>
-									<reference key="NSSuperview" ref="702005236"/>
+									<reference key="NSSuperview" ref="725181389"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="54222572"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -366,30 +367,30 @@
 									<double key="NSMaxMagnification">4</double>
 									<double key="NSMagnification">1</double>
 								</object>
-								<object class="NSCustomView" id="873467321">
-									<reference key="NSNextResponder" ref="702005236"/>
+								<object class="NSCustomView" id="353973570">
+									<reference key="NSNextResponder" ref="725181389"/>
 									<int key="NSvFlags">256</int>
 									<array class="NSMutableArray" key="NSSubviews">
-										<object class="NSTextField" id="801939610">
-											<reference key="NSNextResponder" ref="873467321"/>
+										<object class="NSTextField" id="778438204">
+											<reference key="NSNextResponder" ref="353973570"/>
 											<int key="NSvFlags">301</int>
 											<string key="NSFrame">{{17, 143}, {393, 59}}</string>
-											<reference key="NSSuperview" ref="873467321"/>
+											<reference key="NSSuperview" ref="353973570"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="570039552"/>
 											<string key="NSReuseIdentifierKey">_NS:1535</string>
 											<bool key="NSEnabled">YES</bool>
-											<object class="NSTextFieldCell" key="NSCell" id="1055442805">
+											<object class="NSTextFieldCell" key="NSCell" id="549156609">
 												<int key="NSCellFlags">67108864</int>
 												<int key="NSCellFlags2">138412032</int>
-												<string key="NSContents">Select an article on the left to preview it</string>
+												<string key="NSContents"/>
 												<object class="NSFont" key="NSSupport">
 													<string key="NSName">LucidaGrande</string>
 													<double key="NSSize">22</double>
 													<int key="NSfFlags">16</int>
 												</object>
 												<string key="NSCellIdentifier">_NS:1535</string>
-												<reference key="NSControlView" ref="801939610"/>
+												<reference key="NSControlView" ref="778438204"/>
 												<reference key="NSBackgroundColor" ref="951922417"/>
 												<object class="NSColor" key="NSTextColor">
 													<int key="NSColorSpace">1</int>
@@ -398,8 +399,8 @@
 											</object>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 										</object>
-										<object class="WebView" id="396199187">
-											<reference key="NSNextResponder" ref="873467321"/>
+										<object class="WebView" id="300891379">
+											<reference key="NSNextResponder" ref="353973570"/>
 											<int key="NSvFlags">-2147483392</int>
 											<set class="NSMutableSet" key="NSDragTypes">
 												<string>Apple HTML pasteboard type</string>
@@ -419,7 +420,7 @@
 												<string>public.url-name</string>
 											</set>
 											<string key="NSFrameSize">{427, 338}</string>
-											<reference key="NSSuperview" ref="873467321"/>
+											<reference key="NSSuperview" ref="353973570"/>
 											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -439,9 +440,9 @@
 										</object>
 									</array>
 									<string key="NSFrame">{{383, 0}, {427, 338}}</string>
-									<reference key="NSSuperview" ref="702005236"/>
+									<reference key="NSSuperview" ref="725181389"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="396199187"/>
+									<reference key="NSNextKeyView" ref="300891379"/>
 									<string key="NSReuseIdentifierKey">_NS:13</string>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -458,10 +459,10 @@
 					<string key="NSFrameSize">{810, 370}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="702005236"/>
+					<reference key="NSNextKeyView" ref="725181389"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1058}}</string>
-				<string key="NSMinSize">{506, 392}</string>
+				<string key="NSMinSize">{710, 392}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSAutorecalculatesContentBorderThicknessMinY">NO</bool>
 				<double key="NSContentBorderThicknessMinY">32</double>
@@ -568,7 +569,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">inderterminateProgress</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="276965202"/>
+						<reference key="destination" ref="111703474"/>
 					</object>
 					<int key="connectionID">230</int>
 				</object>
@@ -587,6 +588,22 @@
 						<reference key="destination" ref="532318968"/>
 					</object>
 					<int key="connectionID">90</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">webView</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="300891379"/>
+					</object>
+					<int key="connectionID">239</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">previewText</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="778438204"/>
+					</object>
+					<int key="connectionID">240</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -775,9 +792,9 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="570039552"/>
 							<reference ref="290258952"/>
-							<reference ref="702005236"/>
+							<reference ref="725181389"/>
 							<reference ref="291691964"/>
-							<reference ref="276965202"/>
+							<reference ref="111703474"/>
 							<reference ref="248735598"/>
 						</array>
 						<reference key="parent" ref="756944966"/>
@@ -855,26 +872,26 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">229</int>
-						<reference key="object" ref="276965202"/>
+						<reference key="object" ref="111703474"/>
 						<reference key="parent" ref="714029937"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">232</int>
-						<reference key="object" ref="702005236"/>
+						<reference key="object" ref="725181389"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="873467321"/>
+							<reference ref="353973570"/>
 							<reference ref="1012084236"/>
 						</array>
 						<reference key="parent" ref="714029937"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">234</int>
-						<reference key="object" ref="873467321"/>
+						<reference key="object" ref="353973570"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="396199187"/>
-							<reference ref="801939610"/>
+							<reference ref="300891379"/>
+							<reference ref="778438204"/>
 						</array>
-						<reference key="parent" ref="702005236"/>
+						<reference key="parent" ref="725181389"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
@@ -884,7 +901,7 @@
 							<reference ref="536735616"/>
 							<reference ref="898848277"/>
 						</array>
-						<reference key="parent" ref="702005236"/>
+						<reference key="parent" ref="725181389"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
@@ -969,21 +986,21 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">236</int>
-						<reference key="object" ref="396199187"/>
-						<reference key="parent" ref="873467321"/>
+						<reference key="object" ref="300891379"/>
+						<reference key="parent" ref="353973570"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">237</int>
-						<reference key="object" ref="801939610"/>
+						<reference key="object" ref="778438204"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1055442805"/>
+							<reference ref="549156609"/>
 						</array>
-						<reference key="parent" ref="873467321"/>
+						<reference key="parent" ref="353973570"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">238</int>
-						<reference key="object" ref="1055442805"/>
-						<reference key="parent" ref="801939610"/>
+						<reference key="object" ref="549156609"/>
+						<reference key="parent" ref="778438204"/>
 					</object>
 				</array>
 			</object>
@@ -1042,7 +1059,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">238</int>
+			<int key="maxID">240</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1113,8 +1130,10 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="buildButton">NSButton</string>
 						<string key="inderterminateProgress">NSProgressIndicator</string>
+						<string key="previewText">NSTextField</string>
 						<string key="statusbarText">NSTextField</string>
 						<string key="tableView">NSTableView</string>
+						<string key="webView">WebView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="buildButton">
@@ -1125,6 +1144,10 @@
 							<string key="name">inderterminateProgress</string>
 							<string key="candidateClassName">NSProgressIndicator</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="previewText">
+							<string key="name">previewText</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="statusbarText">
 							<string key="name">statusbarText</string>
 							<string key="candidateClassName">NSTextField</string>
@@ -1132,6 +1155,10 @@
 						<object class="IBToOneOutletInfo" key="tableView">
 							<string key="name">tableView</string>
 							<string key="candidateClassName">NSTableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="webView">
+							<string key="name">webView</string>
+							<string key="candidateClassName">WebView</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
